objects/PMC_DH_FeatureVisibility__mdt.object
<CustomObject>
    <fields>
        <fullName>PMC_DH_CommercePermission__c</fullName>
        <label>CommercePermission</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Page__c</fullName>
        <label>Page</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Tab_Order__c</fullName>
        <label>Tab Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Type__c</fullName>
        <label>Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FeatureVisibility</label>
    <pluralLabel>Feature Visibilities</pluralLabel>
</CustomObject>